@@ -63,6 +63,7 @@
 
 ;;; Code:
 
+(require 'easymenu)
 (require 'window-purpose-utils)
 (require 'window-purpose-configuration)
 (require 'window-purpose-core)
@@ -233,6 +234,21 @@ This allows Purpose to work well with both `ido' and `helm'.")
              do (define-key purpose-mode-prefix-map key def))
     map)
   "Keymap for Purpose mode.")
+
+(easy-menu-define purpose-menu purpose-mode-map "Purpose Mode"
+  '("Purpose"
+    ["Toggle Buffer Dedication" purpose-toggle-window-buffer-dedicated
+     :help "Toggle current window's dedication to its current buffer"]
+    ["Toggle Purpose Dedication" purpose-toggle-window-purpose-dedicated
+     :help "Toggle current window's dedication to its current purpose"]
+    ["Change Window Purpose" purpose-set-window-purpose
+     :help "Select a purpose for the current window and change its buffer accordingly"]
+    ["Delete Non-Dedicated Windows" purpose-delete-non-dedicated-windows
+     :help "Delete all windows that aren't dedicated to their buffer or purpose"]
+    ["Load Window Layout" purpose-load-window-layout t]
+    ["Save Window Layout" purpose-save-window-layout t]
+    ["Load Frame Layout" purpose-load-frame-layout t]
+    ["Save Frame Layout" purpose-save-frame-layout t]))
 
 ;; https://www.gnu.org/software/emacs/manual/html_node/elisp/Menu-Keymaps.html#Menu-Keymaps
 ;; (defvar purpose-menu-bar-map (make-sparse-keymap "Purpose"))
